# HarmonixiaServer

./: Cargo.toml  INTEGRATION.md  README.md
migrations/: 0001_metadata_maintenance.sql  0002_local_accounts.sql  0003_playlists_playback.sql  0004_system_provider_settings.sql  0005_ingestion_catalog.sql  0006_catalog_browse_indexes.sql  0007_catalog_grouped_search.sql  0008_catalog_search_playlists_filters.sql  0009_canonical_media_associations.sql  0010_transcode_runtime_config.sql  0011_playlist_item_ordering.sql  0012_import_scan_thread_count.sql  0013_public_base_url.sql  0014_playback_context.sql  0015_account_track_favorites.sql
src/: auth.rs  catalog.rs  domain.rs  error.rs  lib.rs  main.rs  media.rs  pipeline.rs  providers.rs  services.rs  sonos.rs  state.rs  storage.rs  transcode.rs
src/admin_ui/: app.js  index.html  styles.css
src/api/: accounts.rs  admin_ui.rs  artwork.rs  catalog.rs  config.rs  events.rs  favorites.rs  home.rs  maintenance.rs  media.rs  mod.rs  openapi.rs  playback.rs  playlists.rs  sonos.rs  startup.rs  sync.rs
tests/: maintenance_api.rs
tests/client/: README.md  harmonixia_tui.py
